package com.directi.training.dip.exercise_refactored;

public interface Database {
    public int write(String inputString);
}
