package com.directi.training.dip.exercise_refactored;

import java.io.IOException;

public interface Encoding {
    public void encodeWithFiles() throws IOException;
    public void encodeBasedOnNetworkAndDatabase() throws IOException;
}